--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>text-to-pdf</title>
+    <meta name="description" content="Text2FileXpress - Convert your text to PDF, DOCX, and TXT instantly. 100% free, no signup required. Perfect for students and professionals." />
+    <meta name="keywords" content="text to pdf, text to docx, document converter, free converter, student tools" />
+    <title>Text2FileXpress - Free Text to PDF & DOCX Converter</title>
   </head>
   <body>
     <div id="root"></div>
