--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/icon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Text2FileXpress - Convert your text to PDF, DOCX, and TXT instantly. 100% free, no signup required. Perfect for students and professionals." />
-    <meta name="keywords" content="text to pdf, text to docx, document converter, free converter, student tools" />
-    <title>Text2FileXpress - Free Text to PDF & DOCX Converter</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Text2FileXpress - Convert your text to PDF, DOCX, and TXT instantly. 100% free, no signup required. Perfect for students and professionals." />
+  <meta name="keywords" content="text to pdf, text to docx, document converter, free converter, student tools" />
+  <title>Text2FileXpress - Free Text to PDF & DOCX Converter</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
