--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     content="Text2FileXpress - Convert your text to PDF, DOCX, and TXT instantly. 100% free, no signup required. Perfect for students and professionals." />
   <meta name="keywords" content="text to pdf, text to docx, document converter, free converter, student tools" />
   <title>Text2FileXpress - Free Text to PDF & DOCX Converter</title>
+
+  <!-- Google AdSense - Replace with your actual publisher ID when ready -->
+  <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXX"
+       crossorigin="anonymous"></script> -->
 </head>
 
 <body>
